latex update, unicode cdlatex

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mylatex/local/cdlatex"]
 	path = mylatex/local/cdlatex
 	url = git@github.com:dwuggh/cdlatex.git
+[submodule "mylatex/local/magic-latex-buffer"]
+	path = mylatex/local/magic-latex-buffer
+	url = git@github.com:dwuggh/magic-latex-buffer.git
